# SCI_Search

./: .env.example  .gitignore  BUG.md  README.md  README.zh-CN.md  Typora_Hook_Log.txt  pyproject.toml  test_live.py  tmp_full_papers_doi.json  tmp_mof_oer_titles_doi_clean.json  tmp_mof_oer_titles_doi_clean.md  tmp_mof_oer_titles_doi_raw.json  技术总纲.md  论文检索模块设计方案（1）——使用自然语言实现文献精准定位.md
.claude/: settings.local.json
openspec/specs/: checkpoints.md  core-search.md  engine.md  export.md  intent-parser.md  json-extraction.md  parsing.md  rate-limit-retry.md
openspec/specs/notion-target/: spec.md
openspec/specs/ocr-provider/: spec.md
src/paper_search/: __init__.py  __main__.py  config.py  export.py  mcp_server.py  mcp_views.py  models.py
src/paper_search/llm/: __init__.py  base.py  claude_provider.py  exceptions.py  factory.py  gemini_provider.py  json_utils.py  openai_provider.py
src/paper_search/prompts/: dedup.py  intent_parsing.py  query_building.py  relevance_scoring.py
src/paper_search/skills/: deduplicator.py  intent_parser.py  query_builder.py  relevance_scorer.py  result_organizer.py  searcher.py
tests/: test_export.py  test_library_api.py  test_main.py  test_mcp_server.py  test_models.py
tests/fixtures/: serpapi_response.json
tests/test_llm/: test_json_utils.py  test_providers.py
tests/test_skills/: test_deduplicator.py  test_intent_parser.py  test_query_builder.py  test_relevance_scorer.py  test_result_organizer.py  test_searcher.py
tests/test_sources/: test_serpapi.py
tests/test_workflow/: test_checkpoints.py  test_engine.py
(+36 files in other folders)
